--- a/Codes/MaskRCNN/DataProcessing.ipynb
+++ b/Codes/MaskRCNN/DataProcessing.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# folder with input images\n",
-    "input_image_dir = '../../Data/Polyps_multiplexedImages/'\n",
+    "input_image_dir = '../../data/Polyps_multiplexedImages/'\n",
     "\n",
     "# folder with output images\n",
     "output_image_dir = './datasets/Nuclei/test/'\n",
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# folder with input images\n",
-    "input_image_dir = '../../Data/AnnotatedNuclei/images/'\n",
+    "input_image_dir = '../../data/AnnotatedNuclei/images/'\n",
     "\n",
     "# folder with output images\n",
     "output_image_dir = './datasets/Nuclei/training/images/'\n",
@@ -82,7 +82,34 @@
     "# call function\n",
     "divide_images(input_image_dir, output_image_dir, width_divider, height_divider)"
    ]
-  },]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 1
 }
