--- a/Codes/UNet/Training.ipynb
+++ b/Codes/UNet/Training.ipynb
@@ -23,13 +23,9 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"Mask_RCNN-2.1\")\n",
-    "import mrcnn_model\n",
-    "import mrcnn_utils\n",
-    "sys.path.append(\"biomagdsb\")\n",
-    "import mask_rcnn_additional\n",
-    "import additional_train"
+    "from utils import train_model_sample, get_image, process_image\n",
+    "from models import unet as unet\n",
+    "%load_ext tensorboard"
    ]
   },
   {
@@ -44,161 +40,179 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "########################\n",
-    "# Image parameters\n",
-    "########################\n",
-    "# training dataset location \n",
-    "training_dir = \"./datasets/Nuclei/training/\"\n",
-    "validation_dir = \"./datasets/Nuclei/validation/\"\n",
-    "\n",
-    "########################\n",
-    "# Training parameters\n",
-    "########################\n",
-    "# pre-trained model used for transfer learning\n",
-    "input_model = \"pretrainedClassifiers/mask_rcnn_coco.h5\"\n",
-    "\n",
-    "# model parts to be trained, number of epochs and learning rate\n",
-    "# heads: training for network heads only\n",
-    "# 4+: training for layers at stage 4 and up (the previous ones are frozen)\n",
-    "# all: all network is trained\n",
-    "epoch_groups = [{\"layers\":\"heads\",\"epochs\":\"1\",\"learning_rate\":\"0.001\"},\n",
-    "               {\"layers\":\"all\",\"epochs\":\"3\",\"learning_rate\":\"0.0005\"}]\n",
-    "\n",
-    "# number of augmented images for each image in the training dataset\n",
-    "nb_augmentations = 100\n",
-    "\n",
-    "# Non-maximum suppression threshold for detection\n",
-    "detection_nms_threshold = 0.5\n",
-    "\n",
-    "# Non-max suppression threshold to filter region proposal network proposals\n",
-    "# lower value will increase the number of proposals\n",
-    "rpn_nms_threshold = 0.6\n",
-    "\n",
-    "# if no validation folder is given, corresponds to the proportion of images-masks in the training folder that are used for validation\n",
-    "train_to_val_ratio = 0.2\n",
-    "\n",
-    "# image size\n",
-    "image_size = 512\n",
-    "\n",
-    "########################\n",
-    "# Output parameters\n",
-    "########################\n",
-    "# location for trained model\n",
-    "output_dir = \"./trainedClassifiers/Nuclei/\"\n",
-    "\n",
-    "# output model name\n",
-    "model_name = \"MaskRCNN_DA100_1_3_epochs\"\n",
-    "\n",
-    "########################\n",
-    "# Model initialization\n",
-    "########################\n",
-    "model = additional_train.MaskTrain(training_dir, validation_dir, input_model,output_dir, model_name,\n",
-    "                    epoch_groups, nb_augmentations, train_to_val_ratio,\n",
-    "                    detection_nms_threshold, rpn_nms_threshold,image_size)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Training Mask R-CNN\n",
-    "\n",
-    "Now, the training can start."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training images (with augmentation): 3636\n",
-      "validation images (with augmentation): 12\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
       "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1919: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
       "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
       "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1834: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
       "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/array_ops.py:1354: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:From Mask_RCNN-2.1/mrcnn_model.py:529: The name tf.random_shuffle is deprecated. Please use tf.random.shuffle instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
       "\n",
-      "WARNING:tensorflow:From Mask_RCNN-2.1/mrcnn_utils.py:196: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-      "\n",
-      "WARNING:tensorflow:From Mask_RCNN-2.1/mrcnn_model.py:572: calling crop_and_resize_v1 (from tensorflow.python.ops.image_ops_impl) with box_ind is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "box_ind is deprecated, use box_indices instead\n",
-      "\n",
-      "Starting at epoch 0. LR=0.001\n",
-      "\n",
-      "Checkpoint Path: ./trainedClassifiers/Nuclei/nuclei20210127T2121/mask_rcnn_nuclei_{epoch:04d}.h5\n",
-      "In model:  rpn_model\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "WARNING:tensorflow:From /home/pecot/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/DLenv/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/gradients_util.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/gradients_util.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/gradients_util.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/engine/training_generator.py:47: UserWarning: Using a generator with `use_multiprocessing=True` and multiple workers may duplicate your data. Please consider using the`keras.utils.Sequence class.\n",
-      "  UserWarning('Using a generator with `use_multiprocessing=True`'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/callbacks.py:850: The name tf.summary.merge_all is deprecated. Please use tf.compat.v1.summary.merge_all instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/callbacks.py:853: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n",
-      "\n",
-      "Epoch 1/1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:583: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
-      "  \"the returned array has changed.\", UserWarning)\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:583: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
-      "  \"the returned array has changed.\", UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 128/3636 [>.............................] - ETA: 35:00 - loss: 4.6836 - rpn_class_loss: 0.0782 - rpn_bbox_loss: 4.2371 - mrcnn_class_loss: 0.0636 - mrcnn_bbox_loss: 0.2565 - mrcnn_mask_loss: 0.0481"
      ]
     }
    ],
    "source": [
-    "# training\n",
-    "model.Train()"
+    "########################\n",
+    "# Image parameters\n",
+    "########################\n",
+    "# training dataset location \n",
+    "training_dir = \"./datasets/EpitheliumStroma/training_1024\"\n",
+    "validation_dir = \"./datasets/EpitheliumStroma/validation_1024\"\n",
+    "\n",
+    "# input number of channels\n",
+    "nb_channels = 2\n",
+    "\n",
+    "# output number of classes\n",
+    "nb_classes = 3\n",
+    "\n",
+    "# imaging field dimension (image size used in U-Net)\n",
+    "imaging_field_x = 1024\n",
+    "imaging_field_y = 1024\n",
+    "\n",
+    "########################\n",
+    "# Training parameters\n",
+    "########################\n",
+    "# learning rate\n",
+    "learning_rate = 1e-4\n",
+    "\n",
+    "# number of epochs (iterations)\n",
+    "nb_epochs = 25\n",
+    "\n",
+    "# number of augmented images for each image in the training dataset\n",
+    "nb_augmentations = 0\n",
+    "\n",
+    "# number of images processed at onece\n",
+    "batch_size = 1\n",
+    "\n",
+    "# if no validation folder is given, corresponds to the proportion of images-masks in the training folder that are used for validation\n",
+    "train_to_val_ratio = 0.2\n",
+    "\n",
+    "########################\n",
+    "# Output parameters\n",
+    "########################\n",
+    "# location for trained model\n",
+    "output_dir = \"./trainedClassifiers/EpitheliumStroma/\"\n",
+    "\n",
+    "# output model name\n",
+    "model_name = \"Unet_DAPI_CK_1024_DA0_25ep\"\n",
+    "\n",
+    "########################\n",
+    "# Model initialization\n",
+    "########################\n",
+    "model = unet(nb_classes, imaging_field_x, imaging_field_y, nb_channels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training U-Net\n",
+    "\n",
+    "Now, the training can start."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 training images\n",
+      "4 validation images\n",
+      "Epoch 1/25\n",
+      "12/12 [==============================] - 16s 1s/step - loss: 1.1897 - acc: 0.6039 - val_loss: 0.8184 - val_acc: 0.9240\n",
+      "Epoch 2/25\n",
+      "12/12 [==============================] - 7s 577ms/step - loss: 1.0179 - acc: 0.8151 - val_loss: 0.8050 - val_acc: 0.9135\n",
+      "Epoch 3/25\n",
+      "12/12 [==============================] - 7s 560ms/step - loss: 1.0264 - acc: 0.7954 - val_loss: 0.8031 - val_acc: 0.9038\n",
+      "Epoch 4/25\n",
+      "12/12 [==============================] - 7s 560ms/step - loss: 0.9527 - acc: 0.8458 - val_loss: 0.7799 - val_acc: 0.9388\n",
+      "Epoch 5/25\n",
+      "12/12 [==============================] - 7s 570ms/step - loss: 1.0079 - acc: 0.7815 - val_loss: 0.7822 - val_acc: 0.9440\n",
+      "Epoch 6/25\n",
+      "12/12 [==============================] - 7s 576ms/step - loss: 0.9186 - acc: 0.8594 - val_loss: 0.8170 - val_acc: 0.9235\n",
+      "Epoch 7/25\n",
+      "12/12 [==============================] - 7s 576ms/step - loss: 0.9233 - acc: 0.8710 - val_loss: 0.9099 - val_acc: 0.8997\n",
+      "Epoch 8/25\n",
+      "12/12 [==============================] - 7s 573ms/step - loss: 0.9953 - acc: 0.7866 - val_loss: 0.8107 - val_acc: 0.9422\n",
+      "Epoch 9/25\n",
+      "12/12 [==============================] - 7s 592ms/step - loss: 0.9133 - acc: 0.8845 - val_loss: 0.7781 - val_acc: 0.9353\n",
+      "Epoch 10/25\n",
+      "12/12 [==============================] - 7s 569ms/step - loss: 0.8634 - acc: 0.9060 - val_loss: 0.8108 - val_acc: 0.9300\n",
+      "Epoch 11/25\n",
+      "12/12 [==============================] - 7s 571ms/step - loss: 0.9506 - acc: 0.8380 - val_loss: 0.7630 - val_acc: 0.9433\n",
+      "Epoch 12/25\n",
+      "12/12 [==============================] - 7s 567ms/step - loss: 0.9361 - acc: 0.8265 - val_loss: 0.7745 - val_acc: 0.9360\n",
+      "Epoch 13/25\n",
+      "12/12 [==============================] - 7s 574ms/step - loss: 0.9279 - acc: 0.8712 - val_loss: 0.7666 - val_acc: 0.9404\n",
+      "Epoch 14/25\n",
+      "12/12 [==============================] - 7s 583ms/step - loss: 0.9320 - acc: 0.8568 - val_loss: 0.7733 - val_acc: 0.9416\n",
+      "Epoch 15/25\n",
+      "12/12 [==============================] - 7s 582ms/step - loss: 0.8437 - acc: 0.9248 - val_loss: 0.7769 - val_acc: 0.9430\n",
+      "Epoch 16/25\n",
+      "12/12 [==============================] - 7s 575ms/step - loss: 0.8413 - acc: 0.9323 - val_loss: 0.8084 - val_acc: 0.9278\n",
+      "Epoch 17/25\n",
+      "12/12 [==============================] - 7s 587ms/step - loss: 0.8256 - acc: 0.9327 - val_loss: 0.8851 - val_acc: 0.9234\n",
+      "Epoch 18/25\n",
+      "12/12 [==============================] - 7s 573ms/step - loss: 0.8273 - acc: 0.9294 - val_loss: 0.8026 - val_acc: 0.9237\n",
+      "Epoch 19/25\n",
+      "12/12 [==============================] - 7s 589ms/step - loss: 0.8951 - acc: 0.8829 - val_loss: 0.8026 - val_acc: 0.9128\n",
+      "Epoch 20/25\n",
+      "12/12 [==============================] - 7s 587ms/step - loss: 0.8486 - acc: 0.9380 - val_loss: 0.8103 - val_acc: 0.9173\n",
+      "Epoch 21/25\n",
+      "12/12 [==============================] - 7s 588ms/step - loss: 0.8489 - acc: 0.9268 - val_loss: 0.8116 - val_acc: 0.9221\n",
+      "Epoch 22/25\n",
+      "12/12 [==============================] - 7s 576ms/step - loss: 0.8286 - acc: 0.9285 - val_loss: 0.8875 - val_acc: 0.8782\n",
+      "Epoch 23/25\n",
+      "12/12 [==============================] - 7s 582ms/step - loss: 0.8480 - acc: 0.9407 - val_loss: 0.8156 - val_acc: 0.9113\n",
+      "Epoch 24/25\n",
+      "12/12 [==============================] - 7s 574ms/step - loss: 0.8274 - acc: 0.9479 - val_loss: 0.8255 - val_acc: 0.9116\n",
+      "Epoch 25/25\n",
+      "12/12 [==============================] - 7s 589ms/step - loss: 0.8406 - acc: 0.9434 - val_loss: 0.8442 - val_acc: 0.8825\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_model_sample(model, training_dir, validation_dir, model_name, batch_size, nb_epochs, \n",
+    "                   imaging_field_x, imaging_field_y, output_dir, learning_rate, \n",
+    "                   nb_augmentations, train_to_val_ratio)\n",
+    "\n",
+    "del model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Showing loss and accuracy with TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir {\"./logs\"}"
    ]
   },
   {
