--- a/Codes/MaskRCNN/Training.ipynb
+++ b/Codes/MaskRCNN/Training.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"Mask_RCNN-2.1\")\n",
@@ -29,7 +21,8 @@
     "import mrcnn_utils\n",
     "sys.path.append(\"biomagdsb\")\n",
     "import mask_rcnn_additional\n",
-    "import additional_train"
+    "import additional_train\n",
+    "%load_ext tensorboard"
    ]
   },
   {
@@ -115,90 +108,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training images (with augmentation): 3636\n",
-      "validation images (with augmentation): 12\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1919: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/array_ops.py:1354: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:From Mask_RCNN-2.1/mrcnn_model.py:529: The name tf.random_shuffle is deprecated. Please use tf.random.shuffle instead.\n",
-      "\n",
-      "WARNING:tensorflow:From Mask_RCNN-2.1/mrcnn_utils.py:196: The name tf.log is deprecated. Please use tf.math.log instead.\n",
-      "\n",
-      "WARNING:tensorflow:From Mask_RCNN-2.1/mrcnn_model.py:572: calling crop_and_resize_v1 (from tensorflow.python.ops.image_ops_impl) with box_ind is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "box_ind is deprecated, use box_indices instead\n",
-      "\n",
-      "Starting at epoch 0. LR=0.001\n",
-      "\n",
-      "Checkpoint Path: ./trainedClassifiers/Nuclei/nuclei20210127T2121/mask_rcnn_nuclei_{epoch:04d}.h5\n",
-      "In model:  rpn_model\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/gradients_util.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/gradients_util.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/tensorflow/python/ops/gradients_util.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/engine/training_generator.py:47: UserWarning: Using a generator with `use_multiprocessing=True` and multiple workers may duplicate your data. Please consider using the`keras.utils.Sequence class.\n",
-      "  UserWarning('Using a generator with `use_multiprocessing=True`'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/callbacks.py:850: The name tf.summary.merge_all is deprecated. Please use tf.compat.v1.summary.merge_all instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/keras/callbacks.py:853: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n",
-      "\n",
-      "Epoch 1/1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:583: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
-      "  \"the returned array has changed.\", UserWarning)\n",
-      "/media/thierry/thp202/Work/Jupyter/NucleiSegmentationAndMarkerIDentification/deep_env/lib/python3.6/site-packages/scipy/ndimage/interpolation.py:583: UserWarning: From scipy 0.13.0, the output shape of zoom() is calculated with round() instead of int() - for these inputs the size of the returned array has changed.\n",
-      "  \"the returned array has changed.\", UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 128/3636 [>.............................] - ETA: 35:00 - loss: 4.6836 - rpn_class_loss: 0.0782 - rpn_bbox_loss: 4.2371 - mrcnn_class_loss: 0.0636 - mrcnn_bbox_loss: 0.2565 - mrcnn_mask_loss: 0.0481"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training\n",
     "model.Train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Showing loss and accuracy with TensorBoard"
    ]
   },
   {
@@ -206,7 +126,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classifier_directory = \"./trained_classifiers/Nuclei/nuclei20210129T0316/\"\n",
+    "%tensorboard --logdir {classifier_directory}"
+   ]
   }
  ],
  "metadata": {
