--- a/Codes/UNet/PreProcessing_DivideImagesIntoSubImages.ipynb
+++ b/Codes/UNet/PreProcessing_DivideImagesIntoSubImages.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Loading\n",
     "\n",
-    "The first step is to load the libraries and functions we need."
+    "The first step is to load the functions from utils."
    ]
   },
   {
@@ -15,17 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import training_parameters_interface, training\n",
-    "%load_ext tensorboard"
+    "from utils import divide_images_interface, divide_images"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting parameters\n",
-    "\n",
-    "The second step is to define all parameters needed for training(s)."
+    "## Divide image into sub-images"
    ]
   },
   {
@@ -34,18 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_trainings = 1\n",
-    "\n",
-    "parameters = training_parameters_interface(nb_trainings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Training U-Net\n",
-    "\n",
-    "Now, the training can start."
+    "# parameter interface\n",
+    "parameters = divide_images_interface()"
    ]
   },
   {
@@ -54,23 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training(nb_trainings, parameters)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Showing loss and accuracy with TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%tensorboard --logdir {\"./logs\"} --host=127.0.0.1"
+    "# call function\n",
+    "divide_images(parameters)"
    ]
   }
  ],
