--- a/Codes/MaskRCNN/PostProcessing_CombineInstanceSegmentations.ipynb
+++ b/Codes/MaskRCNN/PostProcessing_CombineInstanceSegmentations.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Loading\n",
     "\n",
-    "The first step is to load the libraries and functions we need."
+    "The first step is to load the functions from utils."
    ]
   },
   {
@@ -15,16 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import running_parameters_interface, running"
+    "from utils import combine_instance_segmentations_interface, combine_instance_segmentations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting parameters\n",
-    "\n",
-    "The second step is to define the parameters required to run a model."
+    "## Divide image into sub-images"
    ]
   },
   {
@@ -33,18 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_runnings = 1\n",
-    "\n",
-    "parameters = running_parameters_interface(nb_runnings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Running Mask R-CNN\n",
-    "\n",
-    "Now, images can be segmented."
+    "# parameter interface\n",
+    "parameters = combine_instance_segmentations_interface()"
    ]
   },
   {
@@ -53,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "running(nb_runnings, parameters)"
+    "# call function\n",
+    "combine_instance_segmentations(parameters)"
    ]
   }
  ],
