--- a/Codes/MaskRCNN/Training.ipynb
+++ b/Codes/MaskRCNN/Training.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import training_parameters_interface, training, TensorBoard_interface"
+    "from utils import training_parameters_interface, training\n",
+    "import random\n",
+    "%load_ext tensorboard"
    ]
   },
   {
@@ -54,6 +56,22 @@
    "outputs": [],
    "source": [
     "training(nb_trainings, parameters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Showing losses with TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir=\"./trainedClassifiers\" --host=127.0.0.1 --port=2000"
    ]
   }
  ],
