--- a/Codes/UNet/Training.ipynb
+++ b/Codes/UNet/Training.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%tensorboard --logdir {\"./logs\"} --host=127.0.0.1"
+    "%tensorboard --logdir {\"./logs\"} --host=127.0.0.1 --port=1000"
    ]
   }
  ],
